# rose-wood

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docker/postgres/: init.sql
home/: context_processors.py  models.py  wagtail_hooks.py
home/migrations/: 0001_initial.py  0002_homepage_search_image_alter_navigationsettings_id.py  0003_homepage_description_homepage_images.py  0003_project_slug.py  0004_project_created_at_project_updated_at.py  0004_remove_homepage_description_remove_homepage_images_and_more.py  0005_alter_homepage_projects_alter_project_images.py  0006_alter_project_options_remove_homepage_projects_and_more.py  0007_alter_project_images.py  0008_alter_project_images.py  0009_alter_project_options_remove_project_sort_order.py  0010_remove_project_images_projectimages.py  0011_navigationsettings.py  0012_alter_navigationsettings_id.py  0013_slide_slideimages.py
home/templates/home/: home_page.html  project_detail.html
home/templates/home/components/: footer.html
media/images/: Conserving-Bea.2e16d0ba.format-avif.fill-1920x1080-c100.avif  Droolin-Over-M.2e16d0ba.format-avif.fill-1920x1080-c100.avif
mysite/: urls.py
mysite/settings/: base.py  dev.py  production.py
mysite/static/css/: plugins.css  style.css
mysite/static/js/: intro.js  mysite.js
mysite/templates/: base.html  navbar.html
search/: views.py
static/css/: mysite.css  style.css
static/js/: mysite.js  rose-gold.js
